@@ -180,6 +180,10 @@ return [
     'import_upload_rule_time' => 'It might take up to 1 minute to upload the contacts and process them. Be patient.',
     'import_upload_rule_cant_revert' => 'Make sure data is accurate before uploading, as you can’t undo the upload.',
     'import_upload_form_file' => 'Your <code>.vcf</code> or <code>.vCard</code> file:',
+    'import_upload_behaviour' => 'Import behaviour:',
+    'import_upload_behaviour_add' => 'Add new contacts, skip existing',
+    'import_upload_behaviour_replace' => 'Replace existing contacts',
+    'import_upload_behaviour_help' => 'Note: Replacing will replace all data found in the vCard, but will keep existing contact fields.',
     'import_report_title' => 'Importing report',
     'import_report_date' => 'Date of the import',
     'import_report_type' => 'Type of import',
